# ghost_writer

./: README.md
scripts/: initial_setup.bat  initial_setup.sh  install_agent_c.bat  install_agent_c.sh
src/ghost_writer/: README.md
src/ghost_writer/src/: pyproject.toml  setup.py
